# GPOAnalyzer

./: README.md  pyproject.toml
gpoanalyzer/: DescribeNTSecurityDescriptor.py  main.py
