[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "GPOAnalyzer"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
  "ldap3 @ git+https://github.com/cannatag/ldap3",
  "cryptography",
  "pysmb",
  "registrypol",
]
readme = "README.md"

[project.scripts]
gpoanalyzer = "gpoanalyzer.main:main"
